# equipo308

./: ActividadesUsuarios.cc  ActividadesUsuarios.h  CMakeLists.txt  MailingList.cc  MailingList.h  a.out  actividad.txt  actividadesAcademicas.cc  actividadesAcademicas.h  directorAcademico.cc  directorAcademico.h  directores_academicos.txt  enviarmailing.py  listaUsuarios.cc  listaUsuarios.h  main.cc  primercodigo-main.cc  primercodigo.cc  primercodigo.h  usuario.h  usuariosinscritos.txt  veterinariamailing.txt
test/: cancelarInscripcion-test.cc  cancelarInscripcionInvalidos-test.cc  constructorActividadesAcademicas-test.cc  constructorActividadesAcademicasInvalidos-test.cc  constructorActividadesUsuarios-test.cc  inscripcion-test.cc  inscripcionInvalidos-test.cc  modificaractividad-test.cc
tests/: CMakeList.txt  cancelarInscripcion-test.cc
